aws/dsba/walt-id-happypets/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: waltid-happypets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waltid-happypets
  template:
    metadata:
      labels:
        app: waltid-happypets
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: waltid-happypets
          image: wistefan/waltid-ssikit:0.0.2
          imagePullPolicy: Always
          args:
            - serve
            - -b
            - 0.0.0.0
          ports:
            - containerPort: 7000
              name: core-api
            - containerPort: 7001
              name: signatory-api
            - containerPort: 7002
              name: custodian-api
            - containerPort: 7003
              name: auditor-api
            - containerPort: 7004
              name: essif-api
          volumeMounts:
            - mountPath: /app/data
              name: data-volume
      volumes:
      - name: data-volume
        emptyDir:
          sizeLimit: 500Mi
