aws/dsba/walt-id-happypets/route-core.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: waltid-core
spec:
  port:
    targetPort: 7000
  tls:
    termination: edge
  to:
    kind: Service
    name: waltid-happypets
