aws/dsba/walt-id-happypets/route-custodian.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: waltid-custodian
spec:
  port:
    targetPort: http-custodian
  tls:
    termination: edge
  to:
    kind: Service
    name: waltid-happypets
